[package]
name = "onbeat"
version = "0.1.0"
authors = ["tomerh <hacohen0tomer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.114", features =["derive"]}
serde_json = "1.0.56"
systemstat = "0.1.5"
reqwest = {vesrion = "0.10.6", features =["blocking"]}
tokio = {version = "0.2", features = ["full"]}
crossbeam = "0.7.3"
chrono = "0.4.13"


